--- a/index.html
+++ b/index.html
@@ -141,13 +141,36 @@
 }
   </style>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript">
+var query = location.search.slice(1);
+var partes = query.split('&');
+var data = {};
+partes.forEach(function (parte) {
+    var chaveValor = parte.split('=');
+    var chave = chaveValor[0];
+    var valor = chaveValor[1];
+    data[chave] = valor;
+});
+
+var url = data['src'];
+
+     $(document).ready(function () {
+        $('.custom-url').attr('href', "sim1.html?" + query);
+});
+
+     $(document).ready(function () {
+        $('.custom-url2').attr('href', "nao1.html?" + query);
+})
+  </script>
+
 </head>
 <body>
 <div class="jumbotron vertical-center">
 <div class='container'>
 <p class="content-blockquote "> 
 “Acessando você terá o vídeo explicativo e comentários das pessoas que atingiram seus objetivos com o sistema inovador do Peter. Você também quer atingir resultados semanais com essa inteligência artificial?”  
-</p><center><a style='margin-right:15px' href='sim1.html' class='btn btn-success btn-lg'><b>SIM EU QUERO!</b></a><a href='nao1.html' class='btn btn-warning btn-lg'>Não</a>
+</p><center><a class="custom-url" style='margin-right:15px' href='sim1.html' class='btn btn-success btn-lg'><b>SIM EU QUERO!</b></a><a class="custom-url2" href='nao1.html' class='btn btn-warning btn-lg'>Não</a>
 </center></div>
 </div>
 
