--- a/nao1.html
+++ b/nao1.html
@@ -141,13 +141,34 @@
 }
   </style>
 
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript">
+var query = location.search.slice(1);
+var partes = query.split('&');
+var data = {};
+partes.forEach(function (parte) {
+    var chaveValor = parte.split('=');
+    var chave = chaveValor[0];
+    var valor = chaveValor[1];
+    data[chave] = valor;
+});
+
+var url = data['src'];
+
+     $(document).ready(function () {
+        $('.custom-url').attr('href', "https://go.perfectpay.com.br/PPU38CK63E1?" + query);
+});
+
+  </script>
+
+
 </head>
 <body>
  <div class="jumbotron vertical-center">
 <div class='container'>
 <p class="content-blockquote "> 
 “Espera! temos um código promocional somente para este primeiro acesso. Você aceita este desconto?”  
-</p><center><a style='margin-right:15px' href='https://go.perfectpay.com.br/PPU38CK63E1' class='btn btn-success btn-lg'><b>SIM EU QUERO!</b></a><a href='https://go.perfectpay.com.br/PPU38CK63E1' class='btn btn-warning btn-lg'>Não</a>
+</p><center><a class="custom-url" style='margin-right:15px' href='https://go.perfectpay.com.br/PPU38CK63E1' class='btn btn-success btn-lg'><b>SIM EU QUERO!</b></a><a class="custom-url" href='https://go.perfectpay.com.br/PPU38CK63E1' class='btn btn-warning btn-lg'>Não</a>
 </center></div>
 </div>
 
