--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ var url = data['src'];
 <div class='container'>
 <p class="content-blockquote "> 
 “Acessando você terá o vídeo explicativo e comentários das pessoas que atingiram seus objetivos com o sistema inovador do Peter. Você também quer atingir resultados semanais com essa inteligência artificial?”  
-</p><center><a class="custom-url" style='margin-right:15px' href='sim1.html' class='btn btn-success btn-lg'><b>SIM EU QUERO!</b></a><a class="custom-url2" href='nao1.html' class='btn btn-warning btn-lg'>Não</a>
+</p><center><a style='margin-right:15px' href='sim1.html' class='btn btn-success btn-lg custom-url'><b>SIM EU QUERO!</b></a><a href='nao1.html' class='btn btn-warning btn-lg custom-url2'>Não</a>
 </center></div>
 </div>
 
