--- a/nao1.html
+++ b/nao1.html
@@ -168,7 +168,7 @@ var url = data['src'];
 <div class='container'>
 <p class="content-blockquote "> 
 “Espera! temos um código promocional somente para este primeiro acesso. Você aceita este desconto?”  
-</p><center><a class="custom-url" style='margin-right:15px' href='https://go.perfectpay.com.br/PPU38CK63E1' class='btn btn-success btn-lg'><b>SIM EU QUERO!</b></a><a class="custom-url" href='https://go.perfectpay.com.br/PPU38CK63E1' class='btn btn-warning btn-lg'>Não</a>
+</p><center><a style='margin-right:15px' href='https://go.perfectpay.com.br/PPU38CK63E1' class='btn btn-success btn-lg custom-url'><b>SIM EU QUERO!</b></a><a href='https://go.perfectpay.com.br/PPU38CK63E1' class='btn btn-warning btn-lg custom-url'>Não</a>
 </center></div>
 </div>
 
