--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <div class="jumbotron vertical-center">
 <div class='container'>
 <p class="content-blockquote "> 
-“Acessando você terá o vídeo explicativo e comentários das pessoas que atingiram seus objetivos com o sistema inovador do Peter. Você também quer atingir resultados semanais com essa inteligência artificial?”  
+“Acessando a próxima página, você verá o vídeo explicativo e comentários de mulheres que salvaram seus relacionamentos com a fórmula criada por uma mulher comum, chamada Daniella. Você também quer resgatar sua relação e ter seu homem mais carinhoso e amoroso do que nunca?”  
 </p><center><a style='margin-right:15px' href='sim1.html' class='btn btn-success btn-lg custom-url'><b>SIM EU QUERO!</b></a><a href='nao1.html' class='btn btn-warning btn-lg custom-url2'>Não</a>
 </center></div>
 </div>
