--- a/sim1.html
+++ b/sim1.html
@@ -151,7 +151,7 @@
 <div class='container'>
 <p class="content-blockquote "> 
 “Temos um código promocional somente para este primeiro acesso. Você aceita este desconto?”  
-</p><center><a style='margin-right:15px' href='https://go.perfectpay.com.br/PPU38CK63E1' class='btn btn-success btn-lg custom-url'><b>SIM EU QUERO!</b></a><a href='https://go.perfectpay.com.br/PPU38CK63E1' class='btn btn-warning btn-lg custom-url'>Não</a></center>
+</p><center><a style='margin-right:15px' href='https://reacenderodesejo.github.io/pv/index.html' class='btn btn-success btn-lg custom-url'><b>SIM EU QUERO!</b></a><a href='https://reacenderodesejo.github.io/pv/index.html' class='btn btn-warning btn-lg custom-url'>Não</a></center>
 </div>
 </div>
 
@@ -173,7 +173,7 @@ partes.forEach(function (parte) {
 var url = data['src'];
 
      $(document).ready(function () {
-        $('.custom-url').attr('href', "https://go.perfectpay.com.br/PPU38CK63E1?" + query);
+        $('.custom-url').attr('href', "https://reacenderodesejo.github.io/pv/index.html?" + query);
 });
 
   </script>
